update latest paper

--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: Smoothmiao
+subtitle: 工具的发展史就是人类的发展史
 description: ''
 keywords:
-author: John Doe
-language: en
+author: JJ
+language: zh
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://smoothmiao.github.io/docs
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -92,7 +92,7 @@ pagination_dir: page
 ## include:/exclude: options only apply to the 'source/' folder
 include:
 exclude:
-ignore:
+ignore: human&tool
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
