--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Smoothmiao
 subtitle: 工具的发展史就是人类的发展史
 description: ''
 keywords:
-author: JJ
+author: smoothmiao
 language: zh
 timezone: ''
 
